--- a/projetF-modele/pom.xml
+++ b/projetF-modele/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>projetF-modele</artifactId>
+    <!--<packaging>jar</packaging>-->
 
     <build>
         <plugins>
