--- a/projetF-modele/pom.xml
+++ b/projetF-modele/pom.xml
@@ -12,6 +12,14 @@
     <artifactId>projetF-modele</artifactId>
     <!--<packaging>jar</packaging>-->
 
+    <dependencies>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.182</version>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
