--- a/projetF-struts/src/main/webapp/WEB-INF/web.xml
+++ b/projetF-struts/src/main/webapp/WEB-INF/web.xml
@@ -17,8 +17,12 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
+  <session-config>
+    <session-timeout>1</session-timeout>
+  </session-config>
+
   <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
+    <welcome-file>login.jsp</welcome-file>
   </welcome-file-list>
 
   <listener>
