--- a/projetF-swing/pom.xml
+++ b/projetF-swing/pom.xml
@@ -31,6 +31,21 @@
                     <target>1.7</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <!-- Build an executable JAR file -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.5</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>lib/</classpathPrefix>
+                            <mainClass>fr.univ_orleans.info.ihm.swing.Main</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
