[modele] Début d'un grand nettoyage de code dans le modele -> à simplifier ! (Trop de lignes de code). - Utilisation de log4j.

--- a/projetF-struts/src/main/webapp/WEB-INF/web.xml
+++ b/projetF-struts/src/main/webapp/WEB-INF/web.xml
@@ -26,6 +26,6 @@
   </welcome-file-list>
 
   <listener>
-    <listener-class>fr.univ_orleans.info.ihm.modele.service.InitRemoteService</listener-class>
+    <listener-class>fr.univ_orleans.info.ihm.modele.rmi.InitRemoteService</listener-class>
   </listener>
 </web-app>
