--- a/projetF-swing/pom.xml
+++ b/projetF-swing/pom.xml
@@ -10,18 +10,18 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>projetF-swing</artifactId>
-    <!--<packaging>jar</packaging>-->
 
     <dependencies>
         <dependency>
             <groupId>fr.univ-orleans.info.ihm</groupId>
             <artifactId>projetF-modele</artifactId>
-            <version>1.0</version>
+            <version>${projetF-modele.version}</version>
         </dependency>
+
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
+            <version>${log4j.version}</version>
         </dependency>
     </dependencies>
 
@@ -30,15 +30,17 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.0</version>
+                <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>${java-source}</source>
+                    <target>${java-target}</target>
                 </configuration>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
+                <version>${maven-assembly-plugin.version}</version>
                 <configuration>
                     <archive>
                         <manifest>
