--- a/pom.xml
+++ b/pom.xml
@@ -24,11 +24,12 @@
         <h2.version>1.4.184</h2.version>
         <javax.servlet-api>3.1.0</javax.servlet-api>
         <jetty-maven-plugin.version>8.1.16.v20140903</jetty-maven-plugin.version>
-        <jsp-api.version>2.2</jsp-api.version>
+        <jsp-api.version>2.0</jsp-api.version>
         <junit.version>4.12</junit.version>
         <log4j.version>1.2.17</log4j.version>
-        <maven-assembly-plugin.version>2.4</maven-assembly-plugin.version>
+        <maven-assembly-plugin.version>2.5.3</maven-assembly-plugin.version>
         <maven-compiler-plugin.version>3.2</maven-compiler-plugin.version>
+        <maven-jar-plugin.version>2.5</maven-jar-plugin.version>
         <servlet-api.version>2.5</servlet-api.version>
         <struts2.version>2.3.20</struts2.version>
         <struts2-bootstrap-plugin.version>2.0.0</struts2-bootstrap-plugin.version>
