--- a/projetF-struts/src/main/webapp/WEB-INF/web.xml
+++ b/projetF-struts/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,14 @@
     <filter-class>
       org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter
     </filter-class>
+    <init-param>
+      <param-name>struts.enable.DynamicMethodInvocation</param-name>
+      <param-value>true</param-value>
+    </init-param>
+    <init-param>
+    <param-name>struts.devMode</param-name>
+      <param-value>true</param-value>
+    </init-param>
   </filter>
 
   <filter-mapping>
@@ -18,7 +26,7 @@
   </filter-mapping>
 
   <session-config>
-    <session-timeout>1</session-timeout>
+    <session-timeout>600</session-timeout>
   </session-config>
 
   <welcome-file-list>
@@ -26,6 +34,8 @@
   </welcome-file-list>
 
   <listener>
-    <listener-class>fr.univ_orleans.info.ihm.modele.rmi.InitRemoteService</listener-class>
+    <listener-class>
+      fr.univ_orleans.info.ihm.modele.rmi.InitRemoteService
+    </listener-class>
   </listener>
 </web-app>
