[struts] Quelques brouillons avec Boottrap + jQuery - Suppression de l'extension .action - Options de changement du niveau de log de struts2 dans log4j.properties - Correction d'une exception dans LoginAction (ajout d'un constructeur...)

--- a/projetF-struts/src/main/resources/log4j.properties
+++ b/projetF-struts/src/main/resources/log4j.properties
@@ -28,8 +28,11 @@ log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c:%L->%M | %m%n
 
-# OpenSymphony Stuff
-log4j.logger.com.opensymphony=INFO
+# FreeMarker
+log4j.logger.freemarker=WARN
 
-# Struts2 Stuff
-log4j.logger.org.apache.struts2=INFO
+# OpenSymphony
+log4j.logger.com.opensymphony=WARN
+
+# Struts2
+log4j.logger.org.apache.struts2=WARN
