--- a/projetF-struts/src/main/webapp/WEB-INF/web.xml
+++ b/projetF-struts/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
          xmlns="http://java.sun.com/xml/ns/j2ee" 
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
-  <display-name>QCM</display-name>
+  <display-name>projetF-struts</display-name>
 
   <filter>
     <filter-name>struts2</filter-name>
@@ -18,6 +18,10 @@
     <param-name>struts.devMode</param-name>
       <param-value>true</param-value>
     </init-param>
+    <init-param>
+      <param-name>struts.action.extension</param-name>
+      <param-value>,</param-value>
+    </init-param>
   </filter>
 
   <filter-mapping>
@@ -30,7 +34,7 @@
   </session-config>
 
   <welcome-file-list>
-    <welcome-file>login.jsp</welcome-file>
+    <welcome-file>home</welcome-file>
   </welcome-file-list>
 
   <listener>
