--- a/projetF-modele/pom.xml
+++ b/projetF-modele/pom.xml
@@ -22,6 +22,7 @@
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>${javax.servlet-api}</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
