--- a/projetF-struts/src/main/resources/log4j.properties
+++ b/projetF-struts/src/main/resources/log4j.properties
@@ -28,6 +28,10 @@ log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c:%L->%M | %m%n
 
+# Apache Commons
+log4j.logger.org.apache.commons.beanutils=WARN
+log4j.logger.org.apache.commons.digester=WARN
+
 # FreeMarker
 log4j.logger.freemarker=WARN
 
@@ -36,3 +40,7 @@ log4j.logger.com.opensymphony=WARN
 
 # Struts2
 log4j.logger.org.apache.struts2=WARN
+
+# Tiles 3
+log4j.logger.org.apache.tiles=WARN
+log4j.logger.org.apache.tiles.impl=DEBUG
