--- a/projetF-struts/src/main/webapp/WEB-INF/web.xml
+++ b/projetF-struts/src/main/webapp/WEB-INF/web.xml
@@ -1,53 +1,72 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app id="struts_blank" version="2.4"
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" id="struts_blank"
+         version="2.4"
          xmlns="http://java.sun.com/xml/ns/j2ee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
-  <display-name>projetF-struts</display-name>
+    <display-name>projetF-struts</display-name>
 
-  <filter>
-    <filter-name>struts2</filter-name>
-    <filter-class>
-      org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter
-    </filter-class>
-    <init-param>
-      <param-name>struts.enable.DynamicMethodInvocation</param-name>
-      <param-value>true</param-value>
-    </init-param>
-    <init-param>
-    <param-name>struts.devMode</param-name>
-      <param-value>true</param-value>
-    </init-param>
-    <init-param>
-      <param-name>struts.action.extension</param-name>
-      <param-value>,</param-value>
-    </init-param>
-    <init-param>
-      <param-name>struts.custom.i18n.resources</param-name>
-      <param-value>global</param-value>
-    </init-param>
-    <init-param>
-      <param-name>struts.i18n.encoding</param-name>
-      <param-value>UTF-8</param-value>
-    </init-param>
-  </filter>
+    <!-- Tiles Configuration -->
+    <context-param>
+        <param-name>
+            org.apache.tiles.impl.BasicTilesContainer.DEFINITIONS_CONFIG
+        </param-name>
+        <param-value>/WEB-INF/tiles.xml</param-value>
+    </context-param>
 
-  <filter-mapping>
-    <filter-name>struts2</filter-name>
-    <url-pattern>/*</url-pattern>
-  </filter-mapping>
+    <!-- Tiles 3 Listener -->
+    <listener>
+        <listener-class>
+            org.apache.tiles.web.startup.simple.SimpleTilesListener
+        </listener-class>
+    </listener>
 
-  <session-config>
-    <session-timeout>600</session-timeout>
-  </session-config>
+    <!-- Modele Listener -->
+    <listener>
+        <listener-class>
+            fr.univ_orleans.info.ihm.modele.rmi.InitRemoteService
+        </listener-class>
+    </listener>
 
-  <welcome-file-list>
-    <welcome-file>home</welcome-file>
-  </welcome-file-list>
+    <!-- Struts 2 Configuration -->
+    <filter>
+        <filter-name>struts2</filter-name>
+        <filter-class>
+            org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter
+        </filter-class>
+        <init-param>
+            <param-name>struts.enable.DynamicMethodInvocation</param-name>
+            <param-value>true</param-value>
+        </init-param>
+        <init-param>
+            <param-name>struts.devMode</param-name>
+            <param-value>true</param-value>
+        </init-param>
+        <init-param>
+            <param-name>struts.action.extension</param-name>
+            <param-value>,</param-value>
+        </init-param>
+        <init-param>
+            <param-name>struts.custom.i18n.resources</param-name>
+            <param-value>global</param-value>
+        </init-param>
+        <init-param>
+            <param-name>struts.i18n.encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+    </filter>
 
-  <listener>
-    <listener-class>
-      fr.univ_orleans.info.ihm.modele.rmi.InitRemoteService
-    </listener-class>
-  </listener>
+    <!-- Struts 2 Filter -->
+    <filter-mapping>
+        <filter-name>struts2</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <session-config>
+        <session-timeout>600</session-timeout>
+    </session-config>
+
+    <welcome-file-list>
+        <welcome-file>home</welcome-file>
+    </welcome-file-list>
+
 </web-app>
