[struts] Euh, tellement de choses... Grosse prise de tête avec Struts2 - La structure est surtout bientôt terminée, reste à écrire toutes les actions :(

--- a/projetF-struts/pom.xml
+++ b/projetF-struts/pom.xml
@@ -83,6 +83,18 @@
         </dependency>
 
         <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>${commons-collections.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity</artifactId>
+            <version>${velocity.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
             <version>${commons-logging.version}</version>
