--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <java-source>1.7</java-source>
         <java-target>1.7</java-target>
         <projetF-modele.version>1.0</projetF-modele.version>
+        <commons-collections.version>3.2.1</commons-collections.version>
         <commons-logging.version>1.2</commons-logging.version>
         <h2.version>1.4.184</h2.version>
         <javax.servlet-api>3.1.0</javax.servlet-api>
@@ -35,6 +36,7 @@
         <struts2.version>2.3.20</struts2.version>
         <struts2-bootstrap-plugin.version>2.0.0</struts2-bootstrap-plugin.version>
         <struts2-jquery-plugin.version>3.7.1</struts2-jquery-plugin.version>
+        <velocity.version>1.7</velocity.version>
     </properties>
 
 </project>
