--- a/projetF-struts/src/main/resources/global.properties
+++ b/projetF-struts/src/main/resources/global.properties
@@ -4,3 +4,4 @@ global.footer.backtotop=Back to top
 global.home=Home
 global.navbar.collapse-menu=Toggle navigation
 global.navbar.pages=Pages
+global.hello=Hello
