--- a/projetF-struts/src/main/resources/log4j.properties
+++ b/projetF-struts/src/main/resources/log4j.properties
@@ -38,6 +38,9 @@ log4j.logger.freemarker=WARN
 # OpenSymphony
 log4j.logger.com.opensymphony=WARN
 
+# Spring
+log4j.logger.org.springframework=WARN
+
 # Struts2
 log4j.logger.org.apache.struts2=WARN
 
