[struts] Un peu de tout...

--- a/projetF-struts/src/main/resources/global.properties
+++ b/projetF-struts/src/main/resources/global.properties
@@ -5,3 +5,10 @@ global.home=Home
 global.navbar.collapse-menu=Toggle navigation
 global.navbar.pages=Pages
 global.hello=Hello
+global.login=Sign In
+global.logout=Sign Out
+global.login.userName=Username
+global.login.password=Password
+global.login.identification=Identification
+global.login.already-signed-in=You have already signed in.
+global.search=Search
