[struts] On peut utiliser un resource.properties dans une classe ! C'est fort pratique.

--- a/projetF-struts/src/main/resources/global.properties
+++ b/projetF-struts/src/main/resources/global.properties
@@ -5,10 +5,13 @@ global.home=Home
 global.navbar.collapse-menu=Toggle navigation
 global.navbar.pages=Pages
 global.hello=Hello
-global.login=Sign In
-global.logout=Sign Out
-global.login.userName=Username
-global.login.password=Password
-global.login.identification=Identification
-global.login.already-signed-in=You have already signed in.
+login=Sign In
+logout=Sign Out
+login.userName=Username
+login.password=Password
+login.identification=Identification
+login.already-signed-in=You have already signed in.
 global.search=Search
+login.validation.userName.null=The username can not be blank.
+login.validation.userName.wrong=Wrong username.
+login.validation.password.wrong=Wrong password.
