[struts] [DAO] Correction d'une erreur dans insertInitValue. + Action des pages d'accueil user/admin.

--- a/projetF-struts/src/main/resources/global.properties
+++ b/projetF-struts/src/main/resources/global.properties
@@ -5,6 +5,7 @@ global.home=Home
 global.navbar.collapse-menu=Toggle navigation
 global.navbar.pages=Pages
 global.hello=Hello
+global.noQCM=No QCM.
 login=Sign In
 logout=Sign Out
 login.userName=Username
