[struts] Petites corrections, sur ton dernier commit Sullivan.

--- a/projetF-struts/src/main/resources/global.properties
+++ b/projetF-struts/src/main/resources/global.properties
@@ -1,18 +1,18 @@
 global.about=About
 global.appName=projetF-struts
 global.footer.backtotop=Back to top
+global.hello=Hello
 global.home=Home
 global.navbar.collapse-menu=Toggle navigation
 global.navbar.pages=Pages
-global.hello=Hello
-global.noQCM=No QCM.
-login=Sign In
-logout=Sign Out
-login.userName=Username
-login.password=Password
-login.identification=Identification
-login.already-signed-in=You have already signed in.
 global.search=Search
+listQCM.noQCM=No QCM.
+login=Sign In
+login.already-signed-in=You have already signed in.
+login.identification=Identification
+login.password=Password
+login.userName=Username
+login.validation.password.wrong=Wrong password.
 login.validation.userName.null=The username can not be blank.
 login.validation.userName.wrong=Wrong username.
-login.validation.password.wrong=Wrong password.
+logout=Sign Out
