--- a/projetF-struts/src/main/resources/log4j.properties
+++ b/projetF-struts/src/main/resources/log4j.properties
@@ -37,6 +37,7 @@ log4j.logger.freemarker=WARN
 
 # OpenSymphony
 log4j.logger.com.opensymphony=WARN
+log4j.logger.com.opensymphony.xwork2.util.LocalizedTextUtil=WARN
 
 # Spring
 log4j.logger.org.springframework=WARN
