[struts] Suppression d'un WARN

--- a/projetF-struts/src/main/resources/global.properties
+++ b/projetF-struts/src/main/resources/global.properties
@@ -6,7 +6,7 @@ global.home=Home
 global.navbar.collapse-menu=Toggle navigation
 global.navbar.pages=Pages
 global.search=Search
-listQCM.noQCM=No QCM.
+user.listQCM.noQCM=No QCM.
 login=Sign In
 login.already-signed-in=You have already signed in.
 login.identification=Identification
@@ -16,3 +16,4 @@ login.validation.password.wrong=Wrong password.
 login.validation.userName.null=The username can not be blank.
 login.validation.userName.wrong=Wrong username.
 logout=Sign Out
+admin.listQCM.noQCM=No QCM.
