--- a/projetF-struts/src/main/resources/global.properties
+++ b/projetF-struts/src/main/resources/global.properties
@@ -17,3 +17,7 @@ login.validation.userName.null=The username can not be blank.
 login.validation.userName.wrong=Wrong username.
 logout=Sign Out
 admin.listQCM.noQCM=No QCM.
+user.listQCM.participate=Participate.
+admin.listQCM.edit=Edit.
+admin.listQCM.more=More.
+admin.listQCM.createOn=Create on
