[struts] Commit important ! - Définition des pages accessibles par type utilisateur.   (c-à-d le lien seulement). -> tiles/components/pages - Ajout d'une page addQCM.jsp et tout ce qui s'en suit. - Passage aux annotations (exception des actions "", "home", "*/home",   "error/*", "login", et "logout", le reste sera en annotation), pourquoi ?   Les annotations évitent un struts.xml trop grand, plus facile de faire du   refactoring, pour les exceptions c'est par facilité car ce sont des   actions un peu spéciales... - Accès à la session et au service simplifié, il est nécessaire de lire   ServiceAndSessionAwareAction.java pour comprendre !   Le code (par exemple) est grandement moins lourd et plus lisible pour   LoginAction.java - ModeleClient.java à lire, complémentaire du point précédent. - struts.enable.DynamicMethodInvocation à false (une action par classe).
[modele]
- Pas d'abstract dans une interface (enfin ça compile mais c'est inutile).

--- a/projetF-struts/src/main/resources/global.properties
+++ b/projetF-struts/src/main/resources/global.properties
@@ -1,3 +1,7 @@
+admin.listQCM.createOn=Create on
+admin.listQCM.edit=Edit.
+admin.listQCM.more=More.
+admin.listQCM.noQCM=No QCM.
 global.about=About
 global.appName=projetF-struts
 global.footer.backtotop=Back to top
@@ -5,8 +9,10 @@ global.hello=Hello
 global.home=Home
 global.navbar.collapse-menu=Toggle navigation
 global.navbar.pages=Pages
+global.pages.admin.addQCM=Add a MCQ
+global.pages.admin.listQCM=MCQ's List
+global.pages.user.listQCM=MCQ's List
 global.search=Search
-user.listQCM.noQCM=No QCM.
 login=Sign In
 login.already-signed-in=You have already signed in.
 login.identification=Identification
@@ -16,8 +22,5 @@ login.validation.password.wrong=Wrong password.
 login.validation.userName.null=The username can not be blank.
 login.validation.userName.wrong=Wrong username.
 logout=Sign Out
-admin.listQCM.noQCM=No QCM.
+user.listQCM.noQCM=No QCM.
 user.listQCM.participate=Participate.
-admin.listQCM.edit=Edit.
-admin.listQCM.more=More.
-admin.listQCM.createOn=Create on
