[struts] Correction d'un WARNING à la compilation (à cause d'un cast). - projetF/pom.xml ajout d'une option -verbose - Tous les pom.xml des modules, compilation avec l'option Xlint:all   (afin de voir tous les WARNING et de les corriger par la suite).

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,9 @@
         <struts2-bootstrap-plugin.version>2.0.0</struts2-bootstrap-plugin.version>
         <struts2-jquery-plugin.version>3.7.1</struts2-jquery-plugin.version>
         <velocity.version>1.7</velocity.version>
+
+        <!-- "-verbose" or "" -->
+        <javac.verbose></javac.verbose>
     </properties>
 
 </project>
