[swing] Jolie interface pour le swing (cadeau pour Éléonore). - Ajout de substance et trident en conséquence comme dépendances.   Cela ne change rien à la manière de faire du swing. C'est juste un thème   multi-plateforme. J'ai choisi le thème le plus sobre et propre.

--- a/projetF-swing/pom.xml
+++ b/projetF-swing/pom.xml
@@ -19,6 +19,18 @@
         </dependency>
 
         <dependency>
+            <groupId>org.java.net.substance</groupId>
+            <artifactId>substance</artifactId>
+            <version>${substance.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.pushingpixels</groupId>
+            <artifactId>trident</artifactId>
+            <version>${trident.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>${log4j.version}</version>
