[Struts] Page de question (user) + Action BeginQCM [DAO] [Modele] Abandon de java.sql.Date (deprecated)

--- a/projetF-struts/src/main/resources/global.properties
+++ b/projetF-struts/src/main/resources/global.properties
@@ -24,3 +24,4 @@ login.validation.userName.wrong=Wrong username.
 logout=Sign Out
 user.listQCM.noQCM=No QCM.
 user.listQCM.participate=Participate.
+global.validate=Validate.
