[Struts] Finalisation de l'espace utilisateur. Mise en place de l'action nextQuestion qui permet d'enregistrer les réponses de l'utilisateur (avec vérification du temps de réponse) et de récupérer la question suivante, ou retourne sur la page endQCM le cas échéant. [Modele] [DAO] Correction et amélioration de fonctions (getNextQuestion et calculerScore). Ajout d'une table pour la fonction getNextQuestion. Ajout d'une fonction calculerScoreMaxQCM.

--- a/projetF-struts/src/main/resources/global.properties
+++ b/projetF-struts/src/main/resources/global.properties
@@ -25,3 +25,5 @@ logout=Sign Out
 user.listQCM.noQCM=No QCM.
 user.listQCM.participate=Participate.
 global.validate=Validate.
+user.endQCM.finish=Congratulations, you have finished QCM.
+user.endQCM.score=Your score \:
