--- a/projetF-modele/pom.xml
+++ b/projetF-modele/pom.xml
@@ -37,6 +37,13 @@
             <artifactId>log4j</artifactId>
             <version>${log4j.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.jasypt</groupId>
+            <artifactId>jasypt</artifactId>
+            <version>${jasypt.version}</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
