[Struts] Ajout et Suppression QCM. Suppresion QCM via AJAX. Ajout QCM renvoie vers la pages listQuestionQCM (permettra par la suite d'ajouter des questions).

--- a/projetF-struts/src/main/resources/global.properties
+++ b/projetF-struts/src/main/resources/global.properties
@@ -27,3 +27,8 @@ user.listQCM.participate=Participate.
 global.validate=Validate.
 user.endQCM.finish=Congratulations, you have finished QCM.
 user.endQCM.score=Your score \:
+admin.listQCM.addQCM=Add QCM.
+admin.listQCM.nameQCM=QCM's name
+admin.listQCM.deleteQCM=Delete QCM.
+admin.listQCM.deleteQCMMessage=Are you sure ?
+global.cancel=Cancel.
