--- a/projetF-struts/src/main/resources/global.properties
+++ b/projetF-struts/src/main/resources/global.properties
@@ -32,3 +32,6 @@ admin.listQCM.nameQCM=QCM's name
 admin.listQCM.deleteQCM=Delete QCM.
 admin.listQCM.deleteQCMMessage=Are you sure ?
 global.cancel=Cancel.
+admin.listQuestionQCM.addQuestion=Add question.
+admin.listQuestionQCM.editQuestion=Edit this question.
+admin.listQuestionQCM.multipleQuestion=Question multiple.
