[struts] Beaucoup de petites choses, pas simples à mettre en place. - (Je termine mon petit truc AJAX demain, j'en ai pour 30 min maintenant.   Je pensais le terminer ce soir, mais j'ai implémenté, amélioré d'autres   choses qui nous sont et seront utiles à tous les deux.) - J'ai intégré font-awesome et awesome-bootstrap-checkboxes, pour voir la   différence lance un QCM en user. - J'ai réarrangé le .css + ajouter des choses. - tiles.xml et layout.jsp intègrent des nouveautés, listes de css et de   js héritables, titre traduisible (on envoit maintenant la clé dans   tiles.xml). - En conséquence nouveau package properties title (pour ne pas alourdir   visuellement l'autre qui commence à grandir). - Deuxième conséquence, pietimer est bien séparé, et inclus que si nécessaire. - Ajout d'une favicon.ico - pom.xml ajout du plugin struts2-json-plugin - Redéfinition de s:checkboxlist et s:radio (un truc un peu fou ...),   tu as un exemple dans questionQCM.jsp   J'utilise le thème simple. Avec le thème bootstrap le code produit html est   bizarrement réparti, et je ne pouvais pas appliquer les propriétés visuelles   comme je le désirais sur le code. On peut s'en inspirer pour la partie   admin. - Du déboggage, par-ci par-là. - L'ergonomie du "gameplay" (même si c'est qu'un QCM) est amélioré.   Boutons alignés.

--- a/projetF-struts/src/main/resources/global.properties
+++ b/projetF-struts/src/main/resources/global.properties
@@ -1,5 +1,5 @@
 admin.listQCM.createOn=Create on
-admin.listQCM.edit=Edit.
+admin.listQCM.edit=Edit
 admin.listQCM.more=More.
 admin.listQCM.noQCM=No QCM.
 global.about=About
@@ -24,10 +24,10 @@ login.validation.userName.wrong=Wrong username.
 logout=Sign Out
 user.listQCM.noQCM=No QCM.
 user.listQCM.participate=Participate.
-global.validate=Validate.
+global.validate=Validate
 user.endQCM.finish=Congratulations, you have finished QCM.
 user.endQCM.score=Your score \:
-admin.listQCM.addQCM=Add QCM.
+admin.listQCM.addQCM=Add an MCQ
 admin.listQCM.nameQCM=QCM's name
 admin.listQCM.deleteQCM=Delete QCM.
 admin.listQCM.deleteQCMMessage=Are you sure ?
