[Struts] Utilisation des action.properties. + amélioration de la compatibilité glyphicon

--- a/projetF-struts/src/main/resources/action.properties
+++ b/projetF-struts/src/main/resources/action.properties
@@ -1,5 +1,10 @@
 action.admin.addQCM=addQCM
+action.admin.deleteQCM=deleteQCM
+action.admin.statusQCM=statusQCM
+action.admin.listQuestionQCM=listQuestionQCM
 action.admin.listQCM=listQCM
 action.user.listQCM=listQCM
+action.user.beginQCM=beginQCM
+action.user.nextQuestion=nextQuestion
 namespace.admin=/admin
 namespace.user=/user
