--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <maven-assembly-plugin.version>2.5.3</maven-assembly-plugin.version>
         <maven-compiler-plugin.version>3.2</maven-compiler-plugin.version>
         <maven-jar-plugin.version>2.5</maven-jar-plugin.version>
+        <maven-surefire-plugin.version>2.18.1</maven-surefire-plugin.version>
         <servlet-api.version>2.5</servlet-api.version>
         <slf4j.version>1.7.9</slf4j.version>
         <substance.version>6.0</substance.version>
