[struts] Inspection + Sonar

--- a/projetF-modele/src/main/resources/log4j.properties
+++ b/projetF-modele/src/main/resources/log4j.properties
@@ -1,3 +1,4 @@
+# suppress inspection "UnusedProperty" for whole file
 # Log4J Settings for log4j 1.2.x (via jakarta-commons-logging)
 #
 # The five logging levels used by Log are (in order):
