--- a/projetF-struts/src/main/resources/action.properties
+++ b/projetF-struts/src/main/resources/action.properties
@@ -1,3 +1,4 @@
+# suppress inspection "UnusedProperty" for whole file
 action.admin.addQCM=addQCM
 action.admin.deleteQCM=deleteQCM
 action.admin.statusQCM=statusQCM
