--- a/projetF-struts/src/main/resources/global.properties
+++ b/projetF-struts/src/main/resources/global.properties
@@ -1,3 +1,4 @@
+# suppress inspection "UnusedProperty" for whole file
 admin.listQCM.createOn=Create on
 admin.listQCM.edit=Edit
 admin.listQCM.more=More.
