--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
         <velocity.version>1.7</velocity.version>
 
         <!-- "-verbose" or "" -->
-        <javac.verbose></javac.verbose>
+        <javac.verbose/>
     </properties>
 
 </project>
