--- a/projetF-struts/src/main/resources/global.properties
+++ b/projetF-struts/src/main/resources/global.properties
@@ -36,3 +36,4 @@ global.cancel=Cancel.
 admin.listQuestionQCM.addQuestion=Add question.
 admin.listQuestionQCM.editQuestion=Edit this question.
 admin.listQuestionQCM.multipleQuestion=Question multiple.
+admin.listQuestionQCM.titleQuestionTable=Questions list.
