--- a/projetF-struts/src/main/resources/global.properties
+++ b/projetF-struts/src/main/resources/global.properties
@@ -35,5 +35,11 @@ admin.listQCM.deleteQCMMessage=Are you sure ?
 global.cancel=Cancel.
 admin.listQuestionQCM.addQuestion=Add question.
 admin.listQuestionQCM.editQuestion=Edit this question.
-admin.listQuestionQCM.multipleQuestion=Question multiple.
+admin.listQuestionQCM.multipleQuestion=Multiple
 admin.listQuestionQCM.titleQuestionTable=Questions list.
+admin.listQuestionQCM.intituleQuestion=Name
+admin.listQuestionQCM.dureeQuestion=Time (s)
+admin.listQuestionQCM.pointQuestion=Point
+global.Yes=Yes
+global.No=No
+admin.listQuestionQCM.correctReponse=Correct
