[Struts] Ajout de spinner dans la page listQuestionQCM.

--- a/projetF-struts/src/main/resources/global.properties
+++ b/projetF-struts/src/main/resources/global.properties
@@ -43,3 +43,4 @@ admin.listQuestionQCM.pointQuestion=Point
 global.Yes=Yes
 global.No=No
 admin.listQuestionQCM.correctReponse=Correct
+admin.listQuestionQCM.Reponses=Answers.
