[struts] Ajout de jQuery.validationEngine v2.6.2 en global - Correction d'un bug dans listQCM.jsp - layout.jsp réarrangé

--- a/projetF-struts/src/main/resources/global.properties
+++ b/projetF-struts/src/main/resources/global.properties
@@ -1,10 +1,27 @@
 # suppress inspection "UnusedProperty" for whole file
+admin.listQCM.addQCM=Add an MCQ
+admin.listQCM.close=Close the MCQ
 admin.listQCM.createOn=Create on
+admin.listQCM.deleteQCM=Delete QCM.
+admin.listQCM.deleteQCMMessage=Are you sure ?
 admin.listQCM.edit=Edit
 admin.listQCM.more=More.
+admin.listQCM.nameQCM=QCM's name
 admin.listQCM.noQCM=No QCM.
+admin.listQuestionQCM.Reponses=Answers.
+admin.listQuestionQCM.addQuestion=Add question.
+admin.listQuestionQCM.correctReponse=Correct
+admin.listQuestionQCM.dureeQuestion=Time (s)
+admin.listQuestionQCM.editQuestion=Edit this question.
+admin.listQuestionQCM.intituleQuestion=Name
+admin.listQuestionQCM.multipleQuestion=Multiple
+admin.listQuestionQCM.pointQuestion=Point
+admin.listQuestionQCM.titleQuestionTable=Questions list.
+global.No=No
+global.Yes=Yes
 global.about=About
 global.appName=projetF-struts
+global.cancel=Cancel.
 global.footer.backtotop=Back to top
 global.hello=Hello
 global.home=Home
@@ -14,6 +31,7 @@ global.pages.admin.addQCM=Add a MCQ
 global.pages.admin.listQCM=MCQ's List
 global.pages.user.listQCM=MCQ's List
 global.search=Search
+global.validate=Validate
 login=Sign In
 login.already-signed-in=You have already signed in.
 login.identification=Identification
@@ -23,24 +41,7 @@ login.validation.password.wrong=Wrong password.
 login.validation.userName.null=The username can not be blank.
 login.validation.userName.wrong=Wrong username.
 logout=Sign Out
-user.listQCM.noQCM=No QCM.
-user.listQCM.participate=Participate.
-global.validate=Validate
 user.endQCM.finish=Congratulations, you have finished QCM.
 user.endQCM.score=Your score \:
-admin.listQCM.addQCM=Add an MCQ
-admin.listQCM.nameQCM=QCM's name
-admin.listQCM.deleteQCM=Delete QCM.
-admin.listQCM.deleteQCMMessage=Are you sure ?
-global.cancel=Cancel.
-admin.listQuestionQCM.addQuestion=Add question.
-admin.listQuestionQCM.editQuestion=Edit this question.
-admin.listQuestionQCM.multipleQuestion=Multiple
-admin.listQuestionQCM.titleQuestionTable=Questions list.
-admin.listQuestionQCM.intituleQuestion=Name
-admin.listQuestionQCM.dureeQuestion=Time (s)
-admin.listQuestionQCM.pointQuestion=Point
-global.Yes=Yes
-global.No=No
-admin.listQuestionQCM.correctReponse=Correct
-admin.listQuestionQCM.Reponses=Answers.
+user.listQCM.noQCM=No QCM.
+user.listQCM.participate=Participate.
