[Struts] Traduction oubliée dans listQuestionQCM.

--- a/projetF-struts/src/main/resources/global.properties
+++ b/projetF-struts/src/main/resources/global.properties
@@ -13,6 +13,7 @@ admin.listQuestionQCM.addQuestion=Add question.
 admin.listQuestionQCM.correctReponse=Correct
 admin.listQuestionQCM.dureeQuestion=Time (s)
 admin.listQuestionQCM.editQuestion=Edit this question.
+admin.listQuestionQCM.editReponses=Edit reponses.
 admin.listQuestionQCM.intituleQuestion=Name
 admin.listQuestionQCM.multipleQuestion=Multiple
 admin.listQuestionQCM.pointQuestion=Point
