[Struts] [Modele] Modele implements  Serializable. + Début fonctionnalité page listUser.

--- a/projetF-struts/src/main/resources/global.properties
+++ b/projetF-struts/src/main/resources/global.properties
@@ -18,6 +18,15 @@ admin.listQuestionQCM.intituleQuestion=Name
 admin.listQuestionQCM.multipleQuestion=Multiple
 admin.listQuestionQCM.pointQuestion=Point
 admin.listQuestionQCM.titleQuestionTable=Questions list.
+admin.listUser.entity=Entity
+admin.listUser.firstName=First name
+admin.listUser.lastName=Last name
+admin.listUser.login=Login
+admin.listUser.student=Student
+admin.listUser.studentNumber=Student number
+admin.listUser.teacher=Teacher
+admin.listUser.titleUserTable=Users list.
+admin.listUser.userManagement=User managgement.
 global.No=No
 global.Yes=Yes
 global.about=About
