[struts] Nettoyage navbar

--- a/projetF-struts/src/main/resources/global.properties
+++ b/projetF-struts/src/main/resources/global.properties
@@ -30,7 +30,7 @@ admin.listUser.userManagement=User managgement.
 global.No=No
 global.Yes=Yes
 global.about=About
-global.appName=projetF-struts
+global.appName=projetF
 global.cancel=Cancel.
 global.footer.backtotop=Back to top
 global.hello=Hello
