--- a/projetF-struts/src/main/resources/title.properties
+++ b/projetF-struts/src/main/resources/title.properties
@@ -1,3 +1,3 @@
 # suppress inspection "UnusedProperty" for whole file
 title.home=Home
-title.website=MCQ (projetF-struts)
+title.website=MCQ (projetF)
