[struts] M-à-j structure, i18n. - Bug global.properties (anglais) ne fonctionne qui si nommé   global_en_US.properties, contrairement à ce qu'indique la doc - Mise en place d'état de connexion dans le footer. - StatusQCMAction avance.
[swing]
- Correction dans Main

--- a/projetF-struts/src/main/resources/action.properties
+++ b/projetF-struts/src/main/resources/action.properties
@@ -1,4 +1,5 @@
 # suppress inspection "UnusedProperty" for whole file
+action.login=login
 action.admin.addQCM=addQCM
 action.admin.deleteQCM=deleteQCM
 action.admin.listQCM=listQCM
