[struts] css .infoJTable pour un beau visuel. - Ajout de listUser au menu admin

--- a/projetF-struts/src/main/resources/action.properties
+++ b/projetF-struts/src/main/resources/action.properties
@@ -4,6 +4,7 @@ action.admin.addQCM=addQCM
 action.admin.deleteQCM=deleteQCM
 action.admin.listQCM=listQCM
 action.admin.listQuestionQCM=listQuestionQCM
+action.admin.listUser=listUser
 action.admin.statusQCM=statusQCM
 action.user.beginQCM=beginQCM
 action.user.listQCM=listQCM
