[DAO] [Struts] Ajout de la page listResultatUtilisateurQCM fontionnel.

--- a/projetF-struts/src/main/resources/action.properties
+++ b/projetF-struts/src/main/resources/action.properties
@@ -1,11 +1,11 @@
-# suppress inspection "UnusedProperty" for whole file
-action.login=login
 action.admin.addQCM=addQCM
+action.admin.addQuestionReponse=addQuestionReponse
 action.admin.deleteQCM=deleteQCM
 action.admin.listQCM=listQCM
 action.admin.listQuestionQCM=listQuestionQCM
 action.admin.listUser=listUser
 action.admin.statusQCM=statusQCM
+action.login=login
 action.user.beginQCM=beginQCM
 action.user.listQCM=listQCM
 action.user.nextQuestion=nextQuestion
