[projet] Last code change !

--- a/projetF-struts/src/main/resources/action.properties
+++ b/projetF-struts/src/main/resources/action.properties
@@ -6,6 +6,7 @@ action.admin.listQuestionQCM=listQuestionQCM
 action.admin.listUser=listUser
 action.admin.statusQCM=statusQCM
 action.login=login
+action.logout=logout
 action.user.beginQCM=beginQCM
 action.user.listQCM=listQCM
 action.user.nextQuestion=nextQuestion
