--- a/projetF-struts/src/main/resources/log4j.properties
+++ b/projetF-struts/src/main/resources/log4j.properties
@@ -49,3 +49,7 @@ log4j.logger.org.apache.struts2=WARN
 # Tiles 3
 log4j.logger.org.apache.tiles=WARN
 log4j.logger.org.apache.tiles.impl=DEBUG
+
+# Il faut d\u00E9finir les titres dans le Resource Bundle 'title' puis les r\u00E9f\u00E9rencer dans tiles.xml, je n'ai plus le temps
+# Supprimer cela ensuite
+log4j.logger.org.apache.struts2.util.TextProviderHelper=FATAL
